# cmp_lattice

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.CFFB569F93528613.idx  proj.cpp.51D9CDBB1F8529A1.idx  states_gen.cpp.4A63EF8D6874B531.idx  (+3 more)
cmake/: Test.cmake
data/: H0NS_vals.txt  H0R_vals.txt  S_vals.txt  out.txt
genproc/: CMakeLists.txt
genproc/generator/: test.hpp
genproc/processor/: eigen.cpp  eigen.hpp
genproc/program/: demo_loop.cpp  demo_loop.hpp
genproc/support/: assert.hpp  batcher.hpp  filter.hpp  fit_line-inl.hpp  fit_line.hpp  function_from_file.cpp  function_from_file.hpp  int_partitions.hpp  join.hpp  line_fitting.cpp  line_fitting.hpp
include/: CMakeLists.txt
include/generator/tffsa/: default_hamiltonian.cpp  default_hamiltonian.hpp  make_matrix-inl.hpp  make_matrix.cpp  sectors.hpp
include/generator/tffsa/detail/: cached_factors.cpp  cached_factors.hpp  form_factor.cpp  form_factor.hpp  sector_factors.hpp  states_gen.cpp  states_gen.hpp  trig_factors.hpp
include/processor/: eigen.cpp  eigen.hpp
include/processor/tffsa/: common.cpp  common.hpp  spectrum.cpp  spectrum.hpp
include/support/: batcher.hpp  fit_line-inl.hpp  function_from_file.hpp  int_partitions.hpp  join.hpp
program/: CMakeLists.txt  crit_point.cpp  demo_loop.cpp  make_spectrum.cpp  playground.cpp
src/: CMakeLists.txt  H0NS_vals.txt  H0R_vals.txt  K_vals.txt  Ktest_vals.txt  S_vals.txt  Stest_vals.txt  out.txt  proj.cpp
tests/: CMakeLists.txt
tests/support/: fit_line_unit.cpp  func_from_file_unit.cpp  join_unit.cpp  partition_unit.cpp
(+24 files in other folders)
